--- a/notes/templates/notes/note_form.html
+++ b/notes/templates/notes/note_form.html
@@ -1,4 +1,4 @@
-<form action="{% url 'notes:form-note' %}" method="post">
+<form action="{% url 'notes:create-note' %}" method="post">
     {% csrf_token %}
 
     <fieldset>
